plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.fiap.seeking_restaurants_provider'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

test{
	//JVM options
	jvmArgs("-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage", "-Xshare:off")
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.webjars:swagger-ui:4.18.1'
	implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.assertj:assertj-core:3.24.2'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
	testImplementation 'com.callibrity.logging:log-tracker:1.0.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
